class-watcom-issue-to_string

--- a/watcom/CMakeLists.txt
+++ b/watcom/CMakeLists.txt
@@ -3,6 +3,7 @@ project (wcbound CXX C)
 
 add_executable(bound bound.cpp)
 add_executable(reverse reverse.cpp)
+add_executable(class class.cpp)
 add_executable(check check.cpp)
 
 # setenv.bat
