--- a/bcc/CMakeLists.txt
+++ b/bcc/CMakeLists.txt
@@ -5,11 +5,16 @@ set(CMAKE_CXX_COMPILER "D:/BCC102/bin/bcc32c.exe")
 
 project (bcc)
 
+# set(CMAKE_BUILD_TYPE Debug)
+# set(CMAKE_BUILD_TYPE RelWithDebInfo)
+set(CMAKE_BUILD_TYPE Release)
+
 add_executable(bound bound.cpp)
 add_executable(reverse reverse.cpp)
 add_executable(stringstream stringstream.cpp)
-add_executable(class class.cpp)
-add_executable(check check.cpp)
+add_executable(intstr intstr.cpp)
+add_executable(class1 class1.cpp)
+add_executable(check1 check1.cpp)
 
 # setenv.bat
 # cmake .. -G"Borland Makefiles"
