--- a/watcom/CMakeLists.txt
+++ b/watcom/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required (VERSION 2.8)
 project (wcbound CXX C)
 
+set(CMAKE_BUILD_TYPE Debug)
+# set(CMAKE_BUILD_TYPE RelWithDebInfo)
+# set(CMAKE_BUILD_TYPE Release)
+
 add_executable(bound bound.cpp)
 add_executable(reverse reverse.cpp)
 add_executable(intstr intstr.cpp)
